@@ -223,6 +223,15 @@ class ProjectClient(base.BaseV1ClientCreateEntity):
             name=requests_utils.quote(name, safe=''))
         return self.connection.get_request(request_path)
 
+    def get_tag(self, name, tag_id):
+        """Retrieve a tag of a project."""
+
+        request_path = "{api_path}{name}/tags/{tag_id}".format(
+            api_path=self.api_path,
+            name=requests_utils.quote(name, safe=''),
+            tag_id=requests_utils.quote(tag_id, safe=''))
+        return self.connection.get_request(request_path)
+
 
 def get_client(connection):
     return ProjectClient(connection)
