@@ -109,6 +109,7 @@ gerritclient =
     project_repo-statistics_show=gerritclient.commands.project:ProjectRepoStatisticsShow
     project_show=gerritclient.commands.project:ProjectShow
     project_tag_list=gerritclient.commands.project:ProjectTagList
+    project_tag_show=gerritclient.commands.project:ProjectTagShow
     server_version=gerritclient.commands.server:ServerVersionShow
     server_capabilities_download=gerritclient.commands.server:ServerCapabilitiesDownload
     server_cache_flush=gerritclient.commands.server:ServerCacheFlush
